// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MaterialUISwitch should match snapshot given theme is dark 1`] = `
<body>
  <div>
    <span
      class="MuiSwitch-root MuiSwitch-sizeMedium css-1jn472g-MuiSwitch-root"
    >
      <span
        class="MuiButtonBase-root MuiSwitch-switchBase MuiSwitch-colorPrimary PrivateSwitchBase-root MuiSwitch-switchBase MuiSwitch-colorPrimary css-1ya4y88-MuiButtonBase-root-MuiSwitch-switchBase"
      >
        <input
          class="PrivateSwitchBase-input MuiSwitch-input css-1m9pwf3"
          type="checkbox"
        />
        <span
          class="MuiSwitch-thumb css-jsexje-MuiSwitch-thumb"
        />
      </span>
      <span
        class="MuiSwitch-track css-dnkzfa-MuiSwitch-track"
      />
    </span>
  </div>
</body>
`;

exports[`MaterialUISwitch should match snapshot given theme is light 1`] = `
<body>
  <div>
    <span
      class="MuiSwitch-root MuiSwitch-sizeMedium css-18bt80y-MuiSwitch-root"
    >
      <span
        class="MuiButtonBase-root MuiSwitch-switchBase MuiSwitch-colorPrimary PrivateSwitchBase-root MuiSwitch-switchBase MuiSwitch-colorPrimary css-byenzh-MuiButtonBase-root-MuiSwitch-switchBase"
      >
        <input
          class="PrivateSwitchBase-input MuiSwitch-input css-1m9pwf3"
          type="checkbox"
        />
        <span
          class="MuiSwitch-thumb css-jsexje-MuiSwitch-thumb"
        />
      </span>
      <span
        class="MuiSwitch-track css-1yjjitx-MuiSwitch-track"
      />
    </span>
  </div>
</body>
`;
